--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./airflow/dags:/opt/airflow/dags
+      - airflow:/opt/airflow/dags
     command: sleep infinity
 
   spark-master:
@@ -33,7 +33,7 @@ services:
   minio:
     image: "minio/minio:latest"
     volumes:
-      - ./.storage/minio:/data
+      - minio:/data
     ports:
       - 9000:9000
       - 9001:9001
@@ -41,11 +41,7 @@ services:
       MINIO_ACCESS_KEY: "root"
       MINIO_SECRET_KEY: "root12345"
     command: server /data --console-address ":9001"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://127.0.0.1:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+
 
   mariadb:
     image: mariadb:latest
@@ -65,28 +61,6 @@ services:
     ports:
       - 9083:9083
 
-  presto:
-    build: ./presto
-    ports:
-      - "8888:8888"
-    volumes:
-      - ./presto/coordinator_config.properties:/opt/presto/etc/config.properties
-      - ./presto/etc/catalog:/opt/presto/etc/catalog
-
-  presto-worker:
-    build: ./presto
-    volumes:
-      - ./presto/worker_config.properties:/opt/presto/etc/config.properties
-      - ./presto/etc/catalog:/opt/presto/etc/catalog
-
-  superset:
-    image: arezamoosavi/superset:latest
-    container_name: superset
-    environment:
-      ADMIN_USERNAME: admin
-      ADMIN_PWD: admin
-    ports:
-      - 8088:8088
-    volumes:
-      - ./superset:/superset
-    restart: unless-stopped
+volumes:
+  airflow:
+  minio:
