--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,15 +1,9 @@
 FROM nvidia/cuda:11.7.1-devel-ubuntu20.04
 FROM python:3.10.6-bullseye
 
-RUN apt-get update -y && apt-get install -y libzbar-dev bash gcc git libc-dev curl wget vim nano \
-    && apt-get install -y iputils-ping telnet openssh-client net-tools \
-    man unzip vim-tiny bc openssh-server thrift-compiler netcat sudo \
-    && apt-get install -y build-essential \
-    && apt-get autoremove -y \
-    && apt-get clean
-    
+  
 
-# Install OpenJDK 8
+# Install OpenJDK 11
 RUN apt-get update && \
     apt-get install -y openjdk-11-jdk ca-certificates-java && \
     apt-get clean && \
@@ -20,6 +14,11 @@ ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
 ENV PATH=$PATH:$JAVA_HOME/bin
 RUN echo $JAVA_HOME
 
+
+RUN apt-get update -y && \
+    && apt-get install -y build-essential \
+    && apt-get autoremove -y \
+    && apt-get clean
 
 
 # install spark
