--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -15,7 +15,7 @@ ENV PATH=$PATH:$JAVA_HOME/bin
 RUN echo $JAVA_HOME
 
 
-RUN apt-get update -y && \
+RUN apt-get update -y \
     && apt-get install -y build-essential \
     && apt-get autoremove -y \
     && apt-get clean
