--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -26,7 +26,7 @@ COPY spark-3.3.0-bin-hadoop3-scala2.13.tgz spark-3.3.0-bin-hadoop3-scala2.13.tgz
 
 RUN tar -xzvf spark-3.3.0-bin-hadoop3-scala2.13.tgz && \
     mv spark-3.3.0-bin-hadoop3-scala2.13 /opt/spark && \
-    rm -rf spark-3.1.1-bin-hadoop3.2.tgz
+    rm -rf spark-3.3.0-bin-hadoop3-scala2.13.tgz
 
 
 ENV SPARK_HOME=/opt/spark
