--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,13 +73,8 @@ services:
       - jupyter:/home/jovyan
     ports:
       - 8888:8888
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    environment:
+      PASSWORD: admin
 
 volumes:
   airflow:
