--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -17,11 +17,11 @@ RUN apt-get update -y \
     && apt-get clean
 
 # install spark
-COPY spark-3.3.0-bin-hadoop3-scala2.13.tgz spark-3.3.0-bin-hadoop3-scala2.13.tgz
+COPY spark-3.3.0-bin-hadoop3.tgz spark-3.3.0-bin-hadoop3.tgz
 
-RUN tar -xzvf spark-3.3.0-bin-hadoop3-scala2.13.tgz && \
-    mv spark-3.3.0-bin-hadoop3-scala2.13 /opt/spark && \
-    rm -rf park-3.3.0-bin-hadoop3-scala2.13.tgz
+RUN tar -xzvf spark-3.3.0-bin-hadoop3.tgz && \
+    mv spark-3.3.0-bin-hadoop3 /opt/spark && \
+    rm -rf spark-3.3.0-bin-hadoop3.tgz
 
 ENV SPARK_HOME=/opt/spark
 ENV PATH=$PATH:$SPARK_HOME/bin
