--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -20,16 +20,17 @@ RUN apt-get update -y \
     && apt-get autoremove -y \
     && apt-get clean
 
+USER 1000
 
 # install spark
 COPY spark-3.3.0-bin-hadoop3.tgz spark-3.3.0-bin-hadoop3.tgz
 
 RUN tar -xzvf spark-3.3.0-bin-hadoop3.tgz && \
-    mv spark-3.3.0-bin-hadoop3 /opt/spark && \
+    mv spark-3.3.0-bin-hadoop3 /usr/local/spark && \
     rm -rf spark-3.3.0-bin-hadoop3.tgz
 
 
-ENV SPARK_HOME=/opt/spark
+ENV SPARK_HOME=/usr/local/spark
 ENV PATH=$PATH:$SPARK_HOME/bin
 ENV PATH=$PATH:$SPARK_HOME/sbin
 ENV PYTHONPATH=$SPARK_HOME/python3:$SPARK_HOME/python3/lib/py4j-0.10.7-src.zip:$PYTHONPATH
@@ -38,5 +39,3 @@ COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./jars /usr/local/spark/jars
-
-USER 1000
